<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.emreonal.cvapp.presentation.common.customviews.EgToolbar
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/home_education" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:scaleType="fitCenter"
            android:src="@drawable/img_cankaya"
            android:transitionName="transitionImage"
            android:layout_margin="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_education_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start"
            android:layout_marginStart="@dimen/dp_10"
            android:includeFontPadding="false"
            android:text="@string/education_cankaya"
            android:textColor="@color/dark"
            android:textSize="@dimen/sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_image"
            app:layout_constraintTop_toTopOf="@+id/iv_image" />

        <TextView
            android:id="@+id/tv_education_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start"
            android:layout_marginStart="@dimen/dp_10"
            android:includeFontPadding="false"
            android:text="@string/education_cankaya_description"
            android:textColor="@color/dark"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_education_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>